# ci-cd-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd_pipeline.yaml
docs/: ci-cd-pipeline.md
scripts/: deploy.py  validate_config.py
src/: __init__.py  app.py
tests/: test_app.py
tests/smoke/: __init__.py  test_smoke.py
