[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-python-project"
version = "0.1.0"
description = "A simple Python project with CI/CD pipeline"
authors = [{ name = "Dennis Marinissen", email = "dennis@wolk.work" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # Core dependencies
    "requests>=2.28.0",
    
    # Testing tools
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    
    # Quality tools
    "mypy>=1.0.0",
    "ruff>=0.0.240",
    
    # Security tools
    "safety>=2.3.5",
    "bandit>=1.7.4",
    
    # Build tools
    "build>=0.10.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "unit: mark a test as a unit test",
    "config: mark a test as a configuration test",
    "smoke: mark a test as a smoke test",
    "performance: mark a test as a performance test"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "W", "I"]

[tool.bandit]
exclude_dirs = ["tests"]
